--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         </nav>
     </header>
 
-    <!--Уникальное содержание-->
+    <main>
+ <!--Уникальное содержание-->
     <section>
         <H1>Effective Solutions for Your Business</H1>
         <button type="button">Order Service</button>
@@ -83,6 +84,7 @@
             </li>
         </ul>
       </section>
+    </main>
       <!--поддвал-->
       <footer>
         <div>
