--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
     <section>
         <ul>
            <li><h2>What are we doing</h2></li>
-           <li><img src="./image/монитор.jpg" alt="Монитор" width="360"></li>
-           <li><img src="./image/дисплей.jpg" alt="Дисплей" width="360"></li>
-           <li><img src="./image/телефон.jpg" alt="Телефон" width="360"></li>
+           <li><img src="./image/monitor.jpg" alt="Монитор" width="360"></li>
+           <li><img src="./image/display.jpg" alt="Дисплей" width="360"></li>
+           <li><img src="./image/telephone.jpg" alt="Телефон" width="360"></li>
         </ul>
     </section>
     <!--Наша команда-->
@@ -88,10 +88,9 @@
       <!--поддвал-->
       <footer>
         <div>
-            <a href="/">WEB<span>STUDIO</span></a>
+            <a href=""./index.html"">WEB<span>STUDIO</span></a>
             <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </div>
-        
 
       </footer>
 
