--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       <!--поддвал-->
       <footer>
         
-            <a href="./index.html"">WEB<span>STUDIO</span></a>
+            <a href="./index.html">WEB<span>STUDIO</span></a>
             <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     
 
