--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     </main>
       <!--поддвал-->
       <footer>
-            <a href="./index.html">WEBSTUDIO</a>
+            <a href="./index.html">WebStudio</a>
             <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 
       </footer>
