--- a/index.html
+++ b/index.html
@@ -11,15 +11,17 @@
     <header>
         <nav>
         <ul>
-            <li><a href="./index.html">WEB<span>STUDIO</span></a></li>
+            <li><a href="./index.html">WebStudio</a></li>
             <li>Studio</li>
             <li>portfolio</li>
             <li>contacts</li>
         </ul>
-        <ul>
+        <Address>
+            <ul>
             <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a> </li>
-        </ul>
+            </ul>
+        </Address>
         </nav>
     </header>
 
