--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <!--Шапка-->
     <header>
+        <a href="./index.html">WebStudio</a>
         <nav>
         <ul>
-            <li><a href="./index.html">WebStudio</a></li>
             <li>Studio</li>
             <li>portfolio</li>
             <li>contacts</li>
