--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!--Шапка-->
     <header>
             <a href="./index.html">WebStudio</a>
+        <nav>
         <ul>
             <li>Studio</li>
             <li>portfolio</li>
@@ -21,6 +22,7 @@
             <li><a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a> </li>
             </ul>
         </Address>
+        </nav>
         
     </header>
 
