--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
         <nav>
             <a href="./index.html">WebStudio</a>
         <ul>
-            <li> <a href="Studio"></a></li>
-            <li> <a href="portfolio"></a></li>
-            <li><a href="contacts"></a> </li>
+            <li> <a href="Studio">studio</a></li>
+            <li> <a href="portfolio">portfolio</a></li>
+            <li><a href="contacts"></a>contacts</li>
         </ul>
         </nav>
         <Address>
             <ul>
             <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+110001111111">+11 (000) 111-11-11</a> </li>
+            <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </Address>
          
