--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <nav>
             <a href="./index.html">WebStudio</a>
         <ul>
-            <li> <a href="Studio">studio</a></li>
-            <li> <a href="portfolio">portfolio</a></li>
-            <li><a href="contacts"></a>contacts</li>
+            <li> <a href="">studio</a></li>
+            <li> <a href="">portfolio</a></li>
+            <li><a href=""></a>contacts</li>
         </ul>
         </nav>
         <Address>
