--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <nav>
             <a href="./index.html">WebStudio</a>
         <ul>
-            <li><a href=""></a>studio</a></li>
-            <li><a href=""></a>portfolio</a></li>
-            <li><a href=""></a>contacts</a></li>
+            <li><a href="">Studio</a></li>
+            <li><a href="">Portfolio</a></li>
+            <li><a href="">Contacts</a></li>
         </ul>
         </nav>
         <Address>
