--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!--Стратегия-->
     <section>
         <ul>
-            <li><h2>features</h2></li>
+            <li><h2 hidden >Strategy</h2></li>
             <li> 
                 <h3>Strategy</h3>
                 <p>Our goal is to identify the business
