--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     </section>
     <!--Стратегия-->
     <section>
+        <h2>Strategy</h2>
         <ul>
-            <li><h2 hidden >Strategy</h2></li>
             <li> 
                 <h3>Strategy</h3>
                 <p>Our goal is to identify the business
