--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
     </section>
     <!--Стратегия-->
     <section>
+        <h2 hidden>Strategy</h2>
         
         <ul>
-            <li><h2 hidden>Strategy</h2></li>
             <li> 
                 <h3>Strategy</h3>
                 <p>Our goal is to identify the business
@@ -61,8 +61,8 @@
     </section>
     <!--Чем мы занимаемся-->
     <section>
+        <h2>What are we doing</h2>
         <ul>
-           <li><h2>What are we doing</h2></li>
            <li><img src="./image/monitor.jpg" alt="Монитор" width="360"></li>
            <li><img src="./image/display.jpg" alt="Дисплей" width="360"></li>
            <li><img src="./image/telephone.jpg" alt="Телефон" width="360"></li>
@@ -70,8 +70,8 @@
     </section>
     <!--Наша команда-->
       <section>
+        <h2>Our Team</h2>
         <ul>
-            <li><h2>Our Team</h2></li>
             <li><img src="./image/MarkGuerrero.jpg" alt="Mark Guerrero" width="264">
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
