--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
     </section>
     <!--Стратегия-->
     <section>
-        <h2 hidden>Strategy</h2>
-        
+        <h2>Strategy</h2>
         <ul>
             <li> 
                 <h3>Strategy</h3>
