--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
     <section>
         <h2>What are we doing</h2>
         <ul>
-           <li><img src="./image/monitor.jpg" alt="Монитор" width="360"></li>
-           <li><img src="./image/display.jpg" alt="Дисплей" width="360"></li>
-           <li><img src="./image/telephone.jpg" alt="Телефон" width="360"></li>
+           <li><images src="./image/monitor.jpg" alt="Монитор" width="360"></li>
+           <li><images src="./image/display.jpg" alt="Дисплей" width="360"></li>
+           <li><images src="./image/telephone.jpg" alt="Телефон" width="360"></li>
         </ul>
     </section>
     <!--Наша команда-->
