--- a/index.html
+++ b/index.html
@@ -62,28 +62,28 @@
     <section>
         <h2>What are we doing</h2>
         <ul>
-           <li><img src="./image/monitor.jpg" alt="Монитор" width="360"></li>
-           <li><img src="./image/display.jpg" alt="Дисплей" width="360"></li>
-           <li><img src="./image/telephone.jpg" alt="Телефон" width="360"></li>
+           <li><img src="./images/monitor.jpg" alt="Монитор" width="360"></li>
+           <li><img src="./images/display.jpg" alt="Дисплей" width="360"></li>
+           <li><img src="./images/telephone.jpg" alt="Телефон" width="360"></li>
         </ul>
     </section>
     <!--Наша команда-->
       <section>
         <h2>Our Team</h2>
         <ul>
-            <li><img src="./image/MarkGuerrero.jpg" alt="Mark Guerrero" width="264">
+            <li><img src="./images/MarkGuerrero.jpg" alt="Mark Guerrero" width="264">
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
             </li>
-            <li><img src="./image/TomFord.jpg" alt="Tom Ford" width="264">
+            <li><img src="./images/TomFord.jpg" alt="Tom Ford" width="264">
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
             </li>
-            <li><img src="./image/CamilaGarcia.jpg" alt="Camila Garcia" width="264">
+            <li><img src="./images/CamilaGarcia.jpg" alt="Camila Garcia" width="264">
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
             </li>
-            <li><img src="./image/DanielWilson.jpg" alt="Daniel Wilson" width="264">
+            <li><img src="./images/DanielWilson.jpg" alt="Daniel Wilson" width="264">
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
             </li>
