Исправил ошибки с папкой images

--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
             <li><a href="">Contacts</a></li>
         </ul>
         </nav>
-        <Address>
+        <address>
             <ul>
             <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
-        </Address>
+        </address>
          
     </header>
 
     <main>
  <!--Уникальное содержание-->
     <section>
-        <H1>Effective Solutions for Your Business</H1>
+        <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
     </section>
     <!--Стратегия-->
@@ -101,3 +101,4 @@
     
 </body>
 </html>
+
