--- a/index.html
+++ b/index.html
@@ -5,15 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <!--Шапка-->
-    <header>
-        <nav>
-            <a href="./index.html">WebStudio</a>
+    <header class="navigation-header">
+        <nav class="nav-logo link">
+            <a href="./index.html"><span class="web">WEB</span>STUDIO</a>
         <ul>
             <li><a href="">Studio</a></li>
-            <li><a href="">Portfolio</a></li>
+            <li><a href="./portfolio.html">Portfolio</a></li>
             <li><a href="">Contacts</a></li>
         </ul>
         </nav>
@@ -28,12 +33,12 @@
 
     <main>
  <!--Уникальное содержание-->
-    <section>
+    <section class="service">
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
     </section>
     <!--Стратегия-->
-    <section>
+    <section class="main-strategy">
         <h2>Strategy</h2>
         <ul>
             <li> 
@@ -91,7 +96,7 @@
       </section>
     </main>
       <!--поддвал-->
-      <footer>
+      <footer class="footer-list">
             <a href="./index.html">WebStudio</a>
             <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 
